an actual competent developer who knows what they're doing,  which is a rare
sight in the unblocked games world.  The current competition is dominated by
people who don't  have a clue  what they're doing and use ChatGPT to  "code"
their infrastructure. No Name Games has and will stay on top of the competi-
tion.
==================================CHANGELOG=================================
09/21/2025:
[+] Added Red Ball 4 (Thanks for the suggestion!)

09/20/2025:
[+] Added Unmonitored Google
[+] Added Getaway Shootout (Thanks for the suggestion!)
[+] Added Levil Devil: NOT a Troll Game (Thanks for the suggestion!)
[+] Added Call of Duty: Black Ops (Thanks for the suggestion!)
[+] Added Whack the Burglars (Thanks for the suggestion!)
[+] Fixed Changelog not working on Microsoft Edge (Thanks for the bug
report Julian G)
[+] Added Pluh RNG (Thanks for the suggestion Julian G) [Sorry I forgot to
add it when I promised you I would, lol]
[+] Fixed Bad Time Simulator (Thanks for the bug report Omega, next
time use the bug report form though)

09/18/2025:
[+] Fixed Tomb of the Mask (Thanks for the bug report Buena)
[+] Fixed Basketball Legends 2020. (Thanks for the bug report Buena)
[-] Removed Basketball Stars 2019. (Might re-add later if people care too
much)

09/17/2025:
[+] Added Pokémon Red, Blue, and Yellow (Thanks for the suggestion!)
[+] Added Basketbros (Thanks for the suggestion Griffin!)
[+] Added Whack Your Ex (Thanks for the suggestion!)
[+] Added Grand Theft Auto Advanced
[+] Fixed 1 on 1 Basketball
[+] Added an update popup to tell you when an update happens

09/16/2025:
[+] Added the survey annoucement. (if you haven't already, please take the
survey, it really does help) This is only temporary and will be removed once
enough responses are collected.

09/13/2025:
[+] Added Ragdoll Archers (Thanks for the suggestion Kaden!)
[+] Re-added There is No Game
[+] Fixed the Soccer Random image being Snailbob 5.
[+] Emulated Games are here! Please don't sue me!