@@ -1,2 +1,0 @@
-version = "6";
-libs = ["./cdn.jsdelivr.net/npm/@orange-games/phaser-ads@2.2/build/phaser-ads.min.js", "./cdn.jsdelivr.net/npm/@orange-games/phaser-cachebuster@2.0/build/phaser-cachebuster.min.js", "./cdn.jsdelivr.net/npm/@orange-games/phaser-input@2.0/build/phaser-input.min.js", "./cdn.jsdelivr.net/npm/@orange-games/phaser-nineslice@2.0/build/phaser-nineslice.min.js", "./cdn.jsdelivr.net/npm/@orange-games/phaser-spine@3.0/build/phaser-spine.min.js", "./cdn.jsdelivr.net/npm/@orange-games/phaser-super-storage@1.0/build/phaser-super-storage.min.js", "./cdn.jsdelivr.net/npm/@orange-games/splash@3.5/build/splash.min.js"];
