@@ -1,0 +1,2 @@
+version = "6";
+libs = ["https://cdn.jsdelivr.net/npm/@orange-games/phaser-ads@2.2/build/phaser-ads.min.js", "https://cdn.jsdelivr.net/npm/@orange-games/phaser-cachebuster@2.0/build/phaser-cachebuster.min.js", "https://cdn.jsdelivr.net/npm/@orange-games/phaser-input@2.0/build/phaser-input.min.js", "https://cdn.jsdelivr.net/npm/@orange-games/phaser-nineslice@2.0/build/phaser-nineslice.min.js", "https://cdn.jsdelivr.net/npm/@orange-games/phaser-spine@3.0/build/phaser-spine.min.js", "https://cdn.jsdelivr.net/npm/@orange-games/phaser-super-storage@1.0/build/phaser-super-storage.min.js", "https://cdn.jsdelivr.net/npm/@orange-games/splash@3.5/build/splash.min.js"];
