@@ -785,7 +785,7 @@
         "img": "vex.jpg"
     },
     "Vex 4": {
-        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/credgames/vex4.xml",
+        "url": "https://cdn.jsdelivr.net/gh/brooklynruff/d@main/other/credgames/vex4_2.xml",
         "img": "vex4.jpg"
     },
     "Vex 5": {
