@@ -20,6 +20,17 @@ people who don't  have a clue  what they're doing and use ChatGPT to  "code"
 their infrastructure. No Name Games has and will stay on top of the competi-
 tion.
 ==================================CHANGELOG=================================
+09/23/2025:
+[!] First off I'd like to start by saying some of you don't understand what
+Unmonitored Google does. Unmonitored Google just makes what you search not
+traceable to your Google account. It does NOT unblock sites and will most
+likely not work if you open a website on it.
+[!] I also noticed a lot of you really want proxies. I *may* do this in
+the future, but for right now this isn't 100% planned.
+[!] I really appreciate all the feedback and bug reports you guys are
+submitting, it really does help. (:
+[+] Fixed Vex 4
+
 09/21/2025:
 [+] Added Red Ball 4 (Thanks for the suggestion!)
 
